Bug 1625508: Use SetLockdownDefaultDacl for the socket process. r=handyman

Add rule to allow content processes to duplicate named pipes to other child
processes. This is why SetLockdownDefaultDacl wasn't working before because it
broke the local handle duplication.
This also reverts the change that was using USER_LIMITED from the start of the
process because that breaks DLL loading when installed somewhere that relies on
the user's own SID for access.

Differential Revision: https://phabricator.services.mozilla.com/D68850